<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_talk">

    <TextView
        android:id="@+id/tv_income_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_income_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_income_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/invite_you_accept_audio_call"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_income_call_end"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:minWidth="180dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_below="@id/tv_income_name"
        android:layout_marginTop="171dp"
        android:background="@drawable/shape_round_black2"
        android:textSize="13sp"
        android:text="@string/call_end"/>

    <LinearLayout
        android:id="@+id/ll_calling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/acb_refuse"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/selector_turn_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:alpha="0.8"
                android:text="@string/refuse"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/acb_answer"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_video_call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:alpha="0.8"
                android:text="@string/accept_call"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_income_switch_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="60dp"
            android:visibility="gone"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/selector_switch_audio"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:alpha="0.8"
                android:text="@string/switch_voice"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>