<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_talk">

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/surface_view_remote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="gone" />

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/surface_view_local"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/waiting_for_video_accept"
        android:textColor="@color/white"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/tv_call_end"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:minWidth="180dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="171dp"
        android:background="@drawable/shape_round_black2"
        android:textSize="13sp"
        android:text="@string/call_end"/>

    <LinearLayout
        android:id="@+id/ll_calling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginBottom="77.5dp"
        >

        <TextView
            android:id="@+id/tv_during"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="02:00"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_switch_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:visibility="gone"
                android:layout_marginRight="55dp"
                android:orientation="vertical"
                android:gravity="center">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/acb_switch_audio"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/selector_switch_audio"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:alpha="0.8"
                    android:text="@string/switch_audio"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/acb_turn_off"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/selector_turn_off" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:alpha="0.8"
                    android:text="@string/turn_off"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_open_door"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="55dp"
                android:visibility="gone"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/acb_open_door"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/selector_open_lock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:alpha="0.8"
                    android:text="@string/open_lock"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_call_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/acb_cancel"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/icon_cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:alpha="0.8"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_call_again"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/icon_vido_float" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:alpha="0.8"
                android:text="@string/call_again"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>